bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:4: error: ';' expected but integer literal found.
  if(a+b)==10){
           ^